added resources folder

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="nav-img" style="width: 32px; height: 32px; ">
             <img 
                 style="width: 32px; height: 32px; border-radius: 25px;"
-                src="pfp.png"
+                src="resources/pfp.png"
                 alt=""
             />
         </div>
@@ -47,7 +47,7 @@
             "
         >
             <div style="display: flex; justify-content: center;">
-                <img width="290px" src="google.png" alt="logo"/>
+                <img width="290px" src="resources/google.png" alt="logo"/>
             </div>
         <!--search bar -->
         <div class="search-bar"
